# cclanguage

./: .travis.yml  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac
doc/: cclanguage-examples.texi  cclanguage.texi  macros.texi
meta/autoconf/: mmux-c-constant-tests.m4  mmux-c-headers-includes.m4  mmux-c-platform.m4
meta/automake/: mmux-makefile-rules
meta/scripts/: cclanguage.pc.in
meta/slackware/: slack-desc.in
src/: cclanguage-compiler.h  cclanguage-internals.h  cclanguage-library.c  cclanguage-map-macro.h  cclanguage-platform.h.in  cclanguage-structs.h  cclanguage-typedefs.h  cclanguage-typedefs.h.in  cclanguage-variadic-macros.h  cclanguage.h
tests/: destructor-trait.h  struct-by-ptr-no-descr.c  struct-by-ptr-no-descr.h  struct-by-ptr-with-descr.c  struct-by-ptr-with-descr.h  struct-by-val-no-descr.c  struct-by-val-no-descr.h  struct-by-val-with-descr.c  struct-by-val-with-descr.h  test-descriptors-tree.c  test-destructor-trait.c  test-struct-by-ptr-no-descr.c  test-struct-by-ptr-with-descr.c  test-struct-by-val-no-descr.c  test-struct-by-val-with-descr.c  test-type-aliases.c  test-variadic-macros.c  test-virtual-methods.c  version.c
